--- a/src/messages.properties
+++ b/src/messages.properties
@@ -1,3 +1,4 @@
 errors.invalid_name=Nome inválido
 
 healthCarePlan.added=Convênio adicionado com sucesso!
+healthCarePlan.updated=Convênio alterado com sucesso!
