gerenciamento de medicos quase finalizado, falta interface

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -1,4 +1,6 @@
 errors.invalid_name=Nome inválido
+errors.invalid_ch=CH inválida
+errors.invalid_crm=CRM inválida
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
