healthcareplan now contains ch value and service table

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -1,4 +1,4 @@
 errors.invalid_name=Nome inválido
-
+errors.invalid_ch=Valor de CH inválido
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
