--- a/src/messages.properties
+++ b/src/messages.properties
@@ -4,3 +4,4 @@ errors.invalid_crm=CRM inválida
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
+healthCarePlan.deactivated=Convênio desativado com sucesso!
