--- a/src/messages.properties
+++ b/src/messages.properties
@@ -5,3 +5,4 @@ errors.invalid_crm=CRM inválida
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
 healthCarePlan.deactivated=Convênio desativado com sucesso!
+healthCarePlan.rules.service.added=Regra para serviço adicionada com sucesso!
