--- a/src/messages.properties
+++ b/src/messages.properties
@@ -5,3 +5,6 @@ errors.invalid_crm=CRM inválida
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
 healthCarePlan.deactivated=Convênio desativado com sucesso!
+
+doctor.added=Médico adicionado com sucesso!
+doctor.updated=Médico alterado com sucesso!
