showing error if it is a repetead service rule

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -6,6 +6,7 @@ healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
 healthCarePlan.deactivated=Convênio desativado com sucesso!
 healthCarePlan.rules.service.added=Regra para serviço adicionada com sucesso!
+healthCarePlan.rules.service.repetead=Regra já existe para esse convênio!
 
 doctor.added=Médico adicionado com sucesso!
 doctor.updated=Médico alterado com sucesso!
