deleting rules; movinng to jpa2

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -7,6 +7,7 @@ healthCarePlan.updated=Convênio alterado com sucesso!
 healthCarePlan.deactivated=Convênio desativado com sucesso!
 healthCarePlan.rules.service.added=Regra para serviço adicionada com sucesso!
 healthCarePlan.rules.service.repetead=Regra já existe para esse convênio!
+healthCarePlan.rules.service.deleted=Regra deletada com sucesso!
 
 doctor.added=Médico adicionado com sucesso!
 doctor.updated=Médico alterado com sucesso!
