adding material rules

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -8,6 +8,9 @@ healthCarePlan.deactivated=Convênio desativado com sucesso!
 healthCarePlan.rules.service.added=Regra para serviço adicionada com sucesso!
 healthCarePlan.rules.service.repetead=Regra já existe para esse convênio!
 healthCarePlan.rules.service.deleted=Regra deletada com sucesso!
+healthCarePlan.rules.material.added=Regra para serviço adicionada com sucesso!
+healthCarePlan.rules.material.repetead=Regra já existe para esse convênio!
+healthCarePlan.rules.material.deleted=Regra deletada com sucesso!
 
 doctor.added=Médico adicionado com sucesso!
 doctor.updated=Médico alterado com sucesso!
