--- a/src/messages.properties
+++ b/src/messages.properties
@@ -1,6 +1,8 @@
 errors.invalid_name=Nome inválido
 errors.invalid_ch=Valor de CH inválido
 errors.invalid_crm=CRM inválida
+errors.invalid_healthcareplan=Convênio inválido
+errors.invalid_telephone=Telefone inválido
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
@@ -11,6 +13,9 @@ healthCarePlan.rules.service.deleted=Regra deletada com sucesso!
 healthCarePlan.rules.material.added=Regra para serviço adicionada com sucesso!
 healthCarePlan.rules.material.repetead=Regra já existe para esse convênio!
 healthCarePlan.rules.material.deleted=Regra deletada com sucesso!
+
+patient.updated=Paciente atualizado com sucesso!
+patient.added=Paciente adicionado com sucesso!
 
 doctor.added=Médico adicionado com sucesso!
 doctor.updated=Médico alterado com sucesso!
