Inicio implementacao da agenda

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -3,6 +3,10 @@ errors.invalid_ch=Valor de CH inválido
 errors.invalid_crm=CRM inválida
 errors.invalid_healthcareplan=Convênio inválido
 errors.invalid_telephone=Telefone inválido
+errors.invalid_doctor=Médico inválido
+errors.invalid_patient=Paciente inválido
+errors.invalid_hour=Horário inválido. O término do compromisso deve ser antes de seu início.
+errors.invalid_day=A data do compromisso deve ser posterior a data atual.
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
