listagem de horarios e diversas alteracoes em agenda

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -23,3 +23,6 @@ patient.added=Paciente adicionado com sucesso!
 
 doctor.added=Médico adicionado com sucesso!
 doctor.updated=Médico alterado com sucesso!
+
+schedule.added=Compromisso adicionado com sucesso!
+schedule.updated=Compromisso alterado com sucesso!
