--- a/src/messages.properties
+++ b/src/messages.properties
@@ -8,6 +8,8 @@ errors.invalid_patient=Paciente inválido
 errors.invalid_hour=Horário inválido. O término do compromisso deve ser antes de seu início.
 errors.invalid_day=A data do compromisso deve ser posterior a data atual.
 
+errors.generic_invalid_date=Data inválida
+
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
 healthCarePlan.deactivated=Convênio desativado com sucesso!
