fazendo adicao de consultas funcionar

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -28,3 +28,5 @@ doctor.updated=Médico alterado com sucesso!
 
 schedule.added=Compromisso adicionado com sucesso!
 schedule.updated=Compromisso alterado com sucesso!
+
+appointments.added=Consulta adicionada com sucesso!
