--- a/src/messages.properties
+++ b/src/messages.properties
@@ -7,6 +7,7 @@ errors.invalid_doctor=Médico inválido
 errors.invalid_patient=Paciente inválido
 errors.invalid_hour=Horário inválido. O término do compromisso deve ser antes de seu início.
 errors.invalid_day=A data do compromisso deve ser posterior a data atual.
+errors.invalid_specialty=Selecione uma especialidade.
 
 errors.generic_invalid_date=Data inválida
 
