--- a/src/messages.properties
+++ b/src/messages.properties
@@ -21,6 +21,8 @@ patient.added=Paciente adicionado com sucesso!
 
 doctor.added=Médico adicionado com sucesso!
 doctor.updated=Médico alterado com sucesso!
+doctor.deactivated=Médico desativado com sucesso!
+doctor.activated=Médico ativado com sucesso!
 
 schedule.added=Compromisso adicionado com sucesso!
 schedule.updated=Compromisso alterado com sucesso!
