processo de refatoracao das telas

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -19,6 +19,8 @@ healthCarePlan.activated=Convênio ativado com sucesso!
 
 patient.updated=Paciente atualizado com sucesso!
 patient.added=Paciente adicionado com sucesso!
+patient.deactivated=Paciente desativado com sucesso!
+patient.activated=Paciente ativado com sucesso!
 
 doctor.added=Médico adicionado com sucesso!
 doctor.updated=Médico alterado com sucesso!
