--- a/src/messages.properties
+++ b/src/messages.properties
@@ -28,3 +28,4 @@ doctor.deactivated=Médico desativado com sucesso!
 doctor.activated=Médico ativado com sucesso!
 
 appointments.added=Consulta adicionada com sucesso!
+appointments.deleted=Consulta deletada com sucesso!
