anamnese implementada; fabrica que gera config do banco agora esta em um lugar soh; campos observacoes convertidos para tipo text

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -9,7 +9,7 @@ errors.invalid_hour=Horário inválido. O término do compromisso deve ser antes de
 errors.invalid_day=A data do compromisso deve ser posterior a data atual.
 errors.invalid_specialty=Selecione uma especialidade.
 errors.invalid_appointment_date=A data da consulta é obrigatório.
-
+errors.invalid_anamnese=Anamnese inválida
 errors.generic_invalid_date=Data inválida
 
 healthCarePlan.added=Convênio adicionado com sucesso!
@@ -29,3 +29,7 @@ doctor.activated=Médico ativado com sucesso!
 
 appointments.added=Consulta adicionada com sucesso!
 appointments.deleted=Consulta deletada com sucesso!
+
+anamneses.added=Anamnese adicionada com sucesso!
+anamneses.updated=Anamnese alterada com sucesso!
+anamneses.deleted=Anamnese removida com sucesso!
