gerenciamento de usuarios

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -11,6 +11,7 @@ errors.invalid_specialty=Selecione uma especialidade.
 errors.invalid_appointment_date=A data da consulta é obrigatório.
 errors.invalid_anamnese=Anamnese inválida
 errors.generic_invalid_date=Data inválida
+errors.invalid_login=Login inválido
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
@@ -33,3 +34,8 @@ appointments.deleted=Consulta deletada com sucesso!
 anamneses.added=Anamnese adicionada com sucesso!
 anamneses.updated=Anamnese alterada com sucesso!
 anamneses.deleted=Anamnese removida com sucesso!
+
+employee.added=Usuário adicionado com sucesso!
+employee.updated=Usuário alterado com sucesso!
+employee.deactivated=Usuário inativado com sucesso!
+employee.activated=Usuário ativado com sucesso!
