validando se login existe

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -12,6 +12,7 @@ errors.invalid_appointment_date=A data da consulta é obrigatório.
 errors.invalid_anamnese=Anamnese inválida
 errors.generic_invalid_date=Data inválida
 errors.invalid_login=Login inválido
+errors.login_already_exists=Login já existente.
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
