dados da clinica

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -40,3 +40,5 @@ employee.added=Usuário adicionado com sucesso!
 employee.updated=Usuário alterado com sucesso!
 employee.deactivated=Usuário inativado com sucesso!
 employee.activated=Usuário ativado com sucesso!
+
+clinic.updated=Dados da clínica atualizados com sucesso!
