acertando autorizador; validando cpf caso ele seja digitado

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -5,14 +5,15 @@ errors.invalid_healthcareplan=Convênio inválido
 errors.invalid_telephone=Telefone inválido
 errors.invalid_doctor=Médico inválido
 errors.invalid_patient=Paciente inválido
-errors.invalid_hour=Horário inválido. O término do compromisso deve ser antes de seu início.
-errors.invalid_day=A data do compromisso deve ser posterior a data atual.
-errors.invalid_specialty=Selecione uma especialidade.
-errors.invalid_appointment_date=A data da consulta é obrigatório.
+errors.invalid_hour=Horário inválido. O término do compromisso deve ser antes de seu início
+errors.invalid_day=A data do compromisso deve ser posterior a data atual
+errors.invalid_specialty=Selecione uma especialidade
+errors.invalid_appointment_date=A data da consulta é obrigatório
 errors.invalid_anamnese=Anamnese inválida
 errors.generic_invalid_date=Data inválida
 errors.invalid_login=Login inválido
-errors.login_already_exists=Login já existente.
+errors.login_already_exists=Login já existente
+errors.invalid_cpf=CPF inválido
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
