geracao de recibos finalizada falta ainda gerar o recibo com jasper

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -14,6 +14,8 @@ errors.generic_invalid_date=Data inválida
 errors.invalid_login=Login inválido
 errors.login_already_exists=Login já existente
 errors.invalid_cpf=CPF inválido
+errors.invalid_in_name_of=Nome para emissão do recibo inválido
+errors.invalid_amount=Valor inválido
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
@@ -43,3 +45,7 @@ employee.deactivated=Usuário inativado com sucesso!
 employee.activated=Usuário ativado com sucesso!
 
 clinic.updated=Dados da clínica atualizados com sucesso!
+
+receipts.added=Recibo adicionado com sucesso!
+receipts.updated=Recibo alterado com sucesso!
+receipts.deleted=Recibo removido com sucesso!
