--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,3 +49,9 @@ clinic.updated=Dados da clínica atualizados com sucesso!
 receipts.added=Recibo adicionado com sucesso!
 receipts.updated=Recibo alterado com sucesso!
 receipts.deleted=Recibo removido com sucesso!
+
+kinship.me=O Próprio
+kinship.mother=Mãe
+kinship.father=Pai
+kinship.brother=Irmão
+kinship.sister=Irmã
