encoding no usuarios

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -55,3 +55,8 @@ kinship.mother=Mãe
 kinship.father=Pai
 kinship.brother=Irmão
 kinship.sister=Irmã
+
+position.financial=Financeiro
+position.doctor=Médico
+position.attendant=Atendente
+position.owner=Dono
