--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,7 @@ errors.login_already_exists=Login já existente
 errors.invalid_cpf=CPF inválido
 errors.invalid_in_name_of=Nome para emissão do recibo inválido
 errors.invalid_amount=Valor inválido
+errors.invalid_birthdate=Data de nascimento inválida
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
