Observacoes gerais finalizada

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,7 @@ errors.login_already_exists=Login já existente
 errors.invalid_cpf=CPF inválido
 errors.invalid_in_name_of=Nome para emissão do recibo inválido
 errors.invalid_amount=Valor inválido
+errors.invalid_general_observations=Observação inválida
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
@@ -60,3 +61,7 @@ position.financial=Financeiro
 position.doctor=Médico
 position.attendant=Atendente
 position.owner=Dono
+
+observation.added=Observação adicionada com sucesso!
+observation.updated=Observação alterada com sucesso!
+observation.deleted=Observação removida com sucesso!
