implementando prescricoes; trocando esquema de filtros, o vraptor injeta a lista

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,6 +18,7 @@ errors.invalid_in_name_of=Nome para emissão do recibo inválido
 errors.invalid_amount=Valor inválido
 errors.invalid_general_observations=Observação inválida
 errors.invalid_birthdate=Data de nascimento inválida
+errors.invalid_prescription=Prescrição inválida
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
@@ -66,3 +67,7 @@ position.owner=Dono
 observation.added=Observação adicionada com sucesso!
 observation.updated=Observação alterada com sucesso!
 observation.deleted=Observação removida com sucesso!
+
+prescription.added=Prescrição adicionada com sucesso!
+prescription.updated=Prescrição alterada com sucesso!
+prescription.deleted=Prescrição removida com sucesso!
