testes para agenda (precisa rodar, tah faltando coisa ainda); teste para listagem de medicos

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,6 +19,7 @@ errors.invalid_amount=Valor inválido
 errors.invalid_general_observations=Observação inválida
 errors.invalid_birthdate=Data de nascimento inválida
 errors.invalid_prescription=Prescrição inválida
+errors.invalid_interval_between_appointments=Intervalo deve ser maior do que 5 minutos.
 
 healthCarePlan.added=Convênio adicionado com sucesso!
 healthCarePlan.updated=Convênio alterado com sucesso!
